force-app/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <label>Policy</label>
    <pluralLabel>Policies</pluralLabel>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Synthetic policy used by the agent action demo.</description>
</CustomObject>