force-app/main/default/objects/Policy__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Policyholder</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo><relationshipName>Policies</relationshipName><deleteConstraint>SetNull</deleteConstraint>
</CustomField>