force-app/main/default/objects/Policy__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Text</type>
    <length>60</length>
</CustomField>